add validations and page_views functionality

--- a/lib/practice_web/templates/cms/page/show.html.eex
+++ b/lib/practice_web/templates/cms/page/show.html.eex
@@ -3,6 +3,11 @@
 <ul>
 
   <li>
+    <strong>Author:</strong>
+    <%= author_name(@page) %>
+  </li>
+
+  <li>
     <strong>Title:</strong>
     <%= @page.title %>
   </li>
